# python-binding-profiling

./: .gitignore  .gitmodules  README.md  build.sh  main.py  pyproject.toml  raw_python.py
c/c_lib/: CMakeLists.txt  library.c  library.h
c/c_lib/include/: c_lib.h
c/c_lib/src/: c_lib.c
cpp/binding_sand_box/: CMakeLists.txt  main.cpp
cpp/binding_sand_box/include/: profile.h  raw_cpp.h
cpp/binding_sand_box/src/: profile.cpp  raw_cpp.cpp
cpp/nanobind_sand_box/: CMakeLists.txt
cpp/nanobind_sand_box/include/: bindings_nano.h  raw_cpp.h
cpp/nanobind_sand_box/src/: bindings_nano.cpp  raw_cpp.cpp
cpp/pure_cpp/: CMakeLists.txt  main.cpp
cpp/pure_cpp/include/: profiler.h  raw_cpp.h
cpp/pure_cpp/pynind11_sand_box/: pure_cpp
cpp/pure_cpp/src/: profiler.cpp  raw_cpp.cpp
cpp/pybind11_sand_box/: CMakeLists.txt  main.cpp
cpp/pybind11_sand_box/include/: bindings_11.h  raw_cpp.h
cpp/pybind11_sand_box/src/: bindings_11.cpp  raw_cpp.cpp
python/: __init__.py  main.py  pyproject.toml
python/pure_python_package/: __init__.py  raw_python.py
python/src/: profiler.py  raw_python.py
