[project]
name = "python-binding-profiling"
version = "0.1.0"
description = "This repo profiles a number of C and CPP python extensions determining which is the best for different use cases."

readme = "README.md"

requires-python = ">=3.8.20"

[tool.hatch.envs.default]
env-vars = { PYTHONPATH = "." }

dependencies = [
    "numpy>=1.24.4",
]
