[project]
name = "python-binding-profiling"
version = "0.1.0"
description = "This repo profiles a number of C and CPP python extensions determining which is the best for different use cases"

readme = "README.md"

requires-python = ">=3.12,<3.13"

dependencies = [
    "numpy>=1.24.4",
    "pure-python-package>=0",
]

[tool.uv.sources]
pure-python-package = { path = "python/dist/pure_python_package-0.1.0-py3-none-any.whl" }

[tool.uv]
package = true